更新编译常用命令

--- a/template.tex
+++ b/template.tex
@@ -2723,7 +2723,7 @@ if not errorlevel 1 goto again
 \subsection{编译常用选项}
 
 \begin{lstlisting}[style=cpp]
--Wall -Woverflow -Wextra -Wpedantic -Wfloat-equal -Wshadow -fsanitize=address,undefined
+-fsanitize=address,undefined -Woverflow -Wshadow -Wall -Wextra -Wpedantic -Wfloat-equal  
 \end{lstlisting}
 
 \subsection{开栈}
