--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,4 @@
-\documentclass[UTF8]{ctexart}
+\documentclass[UTF8, twoside]{ctexart}
 \usepackage[a4paper,margin=2cm]{geometry}
 \usepackage{afterpage}
 \usepackage{xcolor}
