--- a/template.tex
+++ b/template.tex
@@ -19,8 +19,8 @@
 % 定义代码样式
 \lstdefinestyle{cpp}{
   language=C++,
-  basicstyle=\ttfamily\fontsize{8pt}{9.6pt}\selectfont,
-  backgroundcolor=\color{gray!10},
+  basicstyle=\ttfamily\small,
+  backgroundcolor=\color{white},
   keywordstyle=\color{blue}\bfseries,
   commentstyle=\color{green!70!black},
   stringstyle=\color{red},
